tolist removal for not being compatible with older versions